force-app/main/default/objects/rstkf__apcheckstub__c/fields/CurrentStubNum__c.field-meta.xml
<CustomField>
    <fullName>CurrentStubNum__c</fullName>
    <formula>VALUE(StubCounter__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CurrentStubNum</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>