force-app/main/default/objects/rstkf__apcheckstub__c/fields/PrintStubDetail__c.field-meta.xml
<CustomField>
    <fullName>PrintStubDetail__c</fullName>
    <formula>IF(CurrentStubNum__c-rstkf__apcheckstub_apcheck__r.MinStubCount__c&lt;10,TRUE,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PrintStubDetail</label>
    <type>Checkbox</type>
</CustomField>