force-app/main/default/objects/rstkf__apcheckstub__c/fields/StubCounter__c.field-meta.xml
<CustomField>
    <fullName>StubCounter__c</fullName>
    <displayFormat>{000000}</displayFormat>
    <label>StubCounter</label>
    <type>AutoNumber</type>
</CustomField>